--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "mini-css-extract-plugin": "^2.7.6",
     "prettier": "2.7.1",
     "react-refresh": "^0.12.0",
+    "react-refresh-webpack-plugin": "^0.1.0",
     "reg-cli": "^0.17.6",
     "regenerator-runtime": "^0.13.9",
     "sass": "^1.66.1",
